--- a/GeoQuiz/src/main/res/layout/activity_main.xml
+++ b/GeoQuiz/src/main/res/layout/activity_main.xml
@@ -41,22 +41,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <ImageButton
             android:id="@+id/previous_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/previous_button"
-            android:drawableLeft="@drawable/arrow_left"
+            android:src="@drawable/arrow_left"
             android:layout_marginRight="10dp"
-            android:drawablePadding="4dp"/>
+            android:contentDescription="@string/previous_button"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_button"
-            android:drawableEnd="@drawable/arrow_right"
-            android:drawablePadding="4dp"/>
+            android:src="@drawable/arrow_right"
+            android:contentDescription="@string/next_button"/>
 
     </LinearLayout>
 
