--- a/GeoQuiz/src/main/res/layout-land/activity_main.xml
+++ b/GeoQuiz/src/main/res/layout-land/activity_main.xml
@@ -41,6 +41,13 @@
         android:drawableLeft="@drawable/arrow_left"
         android:drawablePadding="4dp"/>
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/cheat_button"/>
+
 
     <Button
         android:id="@+id/next_button"
