--- a/GeoQuiz/src/main/res/layout/activity_cheat.xml
+++ b/GeoQuiz/src/main/res/layout/activity_cheat.xml
@@ -27,4 +27,10 @@
         android:layout_height="wrap_content"
         android:text="@string/show_answer_button"/>
 
+    <TextView
+        android:id="@+id/api_level"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Api level"/>
+
 </LinearLayout>
