--- a/GeoQuiz/src/main/res/layout/activity_main.xml
+++ b/GeoQuiz/src/main/res/layout/activity_main.xml
@@ -43,6 +43,12 @@
         android:layout_marginTop="24dp"
         android:text="@string/cheat_button"/>
 
+    <TextView
+        android:id="@+id/cheat_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
