--- a/CriminalIntent/src/main/res/layout/fragment_crime.xml
+++ b/CriminalIntent/src/main/res/layout/fragment_crime.xml
@@ -28,7 +28,8 @@
         android:id="@+id/crime_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Thu Mar 12 11:56 EST 2020"/>
+        tools:text="Thu Mar 12 11:56 EST 2020"
+        android:padding="80dp"/>
 
     <CheckBox
         android:id="@+id/crime_solved"
