--- a/BeatBox/src/main/res/layout/list_item_sound.xml
+++ b/BeatBox/src/main/res/layout/list_item_sound.xml
@@ -12,5 +12,6 @@
         android:layout_height="120dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        tools:text="@{viewModel.title}"/>
+        android:onClick="@{() -> viewModel.onButtonClicked()}"
+        tools:text="@{viewModel.title}" />
 </layout>
