--- a/BeatBox/src/main/res/values/styles.xml
+++ b/BeatBox/src/main/res/values/styles.xml
@@ -9,8 +9,12 @@
 <!--        <item name="android:textStyle">bold</item>-->
 <!--    </style>-->
 
+<!--    <style name="BeatBoxButton" parent="Widget.AppCompat.Button">-->
+<!--        <item name="android:backgroundTint">@color/dark_blue</item>-->
+<!--        <item name="android:textColor">@color/black</item>-->
+<!--    </style>-->
+
     <style name="BeatBoxButton" parent="Widget.AppCompat.Button">
-        <item name="android:backgroundTint">@color/dark_blue</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/button_beat_box</item>
     </style>
 </resources>
